--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,18 @@
 version: '3.7'
 services:
   frontend:
-    image: 'node:12.16.1-alpine3.9'
+    container_name: frontend
     build: ./web
     ports:
       - "8000:8080"
     volumes:
       - "./web:/app"
+    links:
+      - api
+  api:
+    container_name: backend
+    build: ./api
+    ports:
+      - "3000:3000"
+    volumes:
+      - "./api:/app"
