--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "8000:8080"
     volumes:
       - "./web:/app"
+      - "/app/node_modules"
     links:
       - api
     networks:
@@ -16,6 +17,7 @@ services:
       - "3000"
     volumes:
       - "./api:/app"
+      - "/app/node_modules"
     networks:
       - backend
 networks:
