--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,25 @@
 version: '3.7'
 services:
   frontend:
-    container_name: frontend
     build: ./web
     ports:
       - "8000:8080"
     volumes:
       - "./web:/app"
+      - "/app/node_modules"
     links:
       - api
+    networks:
+      - backend
   api:
-    container_name: backend
     build: ./api
     ports:
-      - "3000:3000"
+      - "3000"
     volumes:
       - "./api:/app"
+      - "/app/node_modules"
+    networks:
+      - backend
+networks:
+  backend:
+    driver: "bridge"
